mengubah link image

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </header>
 
     <!-- Hero Section -->
-    <main class="py-16 md:py-24 bg-cover bg-center" style="background-image: url('/assets/gym_banner.png');">
+    <main class="py-16 md:py-24 bg-cover bg-center" style="background-image: url('https://drive.google.com/file/d/1MbxbbEvvsJks0jKb7UnuSQHi1TrI6gg6/view?usp=sharing');">
         <div class="container mx-auto px-6 text-center">
             <h1 class="text-4xl md:text-6xl font-extrabold text-white leading-tight mb-4 fade-in-item" style="animation-delay: 0.2s;">TRANSFORMASI TUBUHMU</h1>
             <p class="text-lg md:text-xl text-gray-300 mb-8 max-w-2xl mx-auto fade-in-item" style="animation-delay: 0.4s;">
@@ -114,7 +114,7 @@
                 </ul>
             </div>
             <div class="relative fade-in-item" style="animation-delay: 1.0s;">
-                <img src="/assets/gym_interface.png" alt="Gym Interior" class="rounded-xl shadow-2xl">
+                <img src="https://drive.google.com/file/d/1AHVljCcDVS5bey43kqriRsWCVcmm0pR8/view?usp=drive_link" alt="Gym Interior" class="rounded-xl shadow-2xl">
                 <div class="absolute inset-0 bg-black bg-opacity-40 rounded-xl"></div>
             </div>
         </div>
